; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/qlcnic/extr_qlcnic_sriov_pf.c_qlcnic_sriov_pf_del_guest_vlan.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/qlcnic/extr_qlcnic_sriov_pf.c_qlcnic_sriov_pf_del_guest_vlan.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qlcnic_adapter = type { i32 }
%struct.qlcnic_vf_info = type { i32, i32, %struct.qlcnic_vport* }
%struct.qlcnic_vport = type { i64 }

@EINVAL = common dso_local global i32 0, align 4
@QLCNIC_MAC_DEL = common dso_local global i32 0, align 4
@QLCNIC_MAC_ADD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.qlcnic_adapter*, %struct.qlcnic_vf_info*)* @qlcnic_sriov_pf_del_guest_vlan to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @qlcnic_sriov_pf_del_guest_vlan(%struct.qlcnic_adapter* %0, %struct.qlcnic_vf_info* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.qlcnic_adapter*, align 8
  %5 = alloca %struct.qlcnic_vf_info*, align 8
  %6 = alloca %struct.qlcnic_vport*, align 8
  store %struct.qlcnic_adapter* %0, %struct.qlcnic_adapter** %4, align 8
  store %struct.qlcnic_vf_info* %1, %struct.qlcnic_vf_info** %5, align 8
  %7 = load %struct.qlcnic_vf_info*, %struct.qlcnic_vf_info** %5, align 8
  %8 = getelementptr inbounds %struct.qlcnic_vf_info, %struct.qlcnic_vf_info* %7, i32 0, i32 2
  %9 = load %struct.qlcnic_vport*, %struct.qlcnic_vport** %8, align 8
  store %struct.qlcnic_vport* %9, %struct.qlcnic_vport** %6, align 8
  %10 = load %struct.qlcnic_vport*, %struct.qlcnic_vport** %6, align 8
  %11 = getelementptr inbounds %struct.qlcnic_vport, %struct.qlcnic_vport* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %17, label %14

14:                                               ; preds = %2
  %15 = load i32, i32* @EINVAL, align 4
  %16 = sub nsw i32 0, %15
  store i32 %16, i32* %3, align 4
  br label %45

17:                                               ; preds = %2
  %18 = load %struct.qlcnic_vf_info*, %struct.qlcnic_vf_info** %5, align 8
  %19 = getelementptr inbounds %struct.qlcnic_vf_info, %struct.qlcnic_vf_info* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %25, label %22

22:                                               ; preds = %17
  %23 = load %struct.qlcnic_vport*, %struct.qlcnic_vport** %6, align 8
  %24 = getelementptr inbounds %struct.qlcnic_vport, %struct.qlcnic_vport* %23, i32 0, i32 0
  store i64 0, i64* %24, align 8
  store i32 0, i32* %3, align 4
  br label %45

25:                                               ; preds = %17
  %26 = load %struct.qlcnic_adapter*, %struct.qlcnic_adapter** %4, align 8
  %27 = load %struct.qlcnic_vport*, %struct.qlcnic_vport** %6, align 8
  %28 = load %struct.qlcnic_vf_info*, %struct.qlcnic_vf_info** %5, align 8
  %29 = getelementptr inbounds %struct.qlcnic_vf_info, %struct.qlcnic_vf_info* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 8
  %31 = load %struct.qlcnic_vport*, %struct.qlcnic_vport** %6, align 8
  %32 = getelementptr inbounds %struct.qlcnic_vport, %struct.qlcnic_vport* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = load i32, i32* @QLCNIC_MAC_DEL, align 4
  %35 = call i32 @qlcnic_sriov_cfg_vf_def_mac(%struct.qlcnic_adapter* %26, %struct.qlcnic_vport* %27, i32 %30, i64 %33, i32 %34)
  %36 = load %struct.qlcnic_vport*, %struct.qlcnic_vport** %6, align 8
  %37 = getelementptr inbounds %struct.qlcnic_vport, %struct.qlcnic_vport* %36, i32 0, i32 0
  store i64 0, i64* %37, align 8
  %38 = load %struct.qlcnic_adapter*, %struct.qlcnic_adapter** %4, align 8
  %39 = load %struct.qlcnic_vport*, %struct.qlcnic_vport** %6, align 8
  %40 = load %struct.qlcnic_vf_info*, %struct.qlcnic_vf_info** %5, align 8
  %41 = getelementptr inbounds %struct.qlcnic_vf_info, %struct.qlcnic_vf_info* %40, i32 0, i32 0
  %42 = load i32, i32* %41, align 8
  %43 = load i32, i32* @QLCNIC_MAC_ADD, align 4
  %44 = call i32 @qlcnic_sriov_cfg_vf_def_mac(%struct.qlcnic_adapter* %38, %struct.qlcnic_vport* %39, i32 %42, i64 0, i32 %43)
  store i32 0, i32* %3, align 4
  br label %45

45:                                               ; preds = %25, %22, %14
  %46 = load i32, i32* %3, align 4
  ret i32 %46
}

declare dso_local i32 @qlcnic_sriov_cfg_vf_def_mac(%struct.qlcnic_adapter*, %struct.qlcnic_vport*, i32, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
